--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.4.1",
+    "eslint": "^9.28.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1",
-    "eslint": "^9.28.0"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
