--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
