--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,7 @@
       "source": "./fixtures/output/**/*.*",
       "target": "./fixtures/input/<base>"
     }
-  ]
+  ],
+
+  "indentRainbow.indicatorStyle": "light"
 }
