--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/vite": "^4.1.8",
     "@vueuse/core": "^13.3.0",
+    "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
