--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.13.0",
     "@nuxtjs/color-mode": "3.5.2",
+    "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.8",
     "@vueuse/core": "^13.3.0",
     "better-auth": "^1.2.8",
@@ -32,6 +33,7 @@
     "eslint": "^9.28.0",
     "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.17.5",
+    "pinia": "^3.0.3",
     "reka-ui": "^2.3.0",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.0",
