--- a/package.json
+++ b/package.json
@@ -18,27 +18,33 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@libsql/client": "^0.15.8",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.13.0",
     "@nuxtjs/color-mode": "3.5.2",
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "eslint": "^9.28.0",
     "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.17.5",
+    "nuxt-csurf": "1.6.5",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.0",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
     "zod": "^3.25.56"
